--- a/finance-analyzer/pom.xml
+++ b/finance-analyzer/pom.xml
@@ -21,19 +21,19 @@
     	<version>3.0-alpha-1</version>
     </dependency>
     <dependency>
-    	<groupId>com.sun.jersey</groupId>
-    	<artifactId>jersey-server</artifactId>
-    	<version>1.19</version>
+    	<groupId>org.apache.openjpa</groupId>
+    	<artifactId>openjpa-all</artifactId>
+    	<version>2.4.1</version>
     </dependency>
     <dependency>
-    	<groupId>com.sun.jersey</groupId>
-    	<artifactId>jersey-bundle</artifactId>
-    	<version>1.19</version>
+    	<groupId>org.glassfish.jersey.containers</groupId>
+    	<artifactId>jersey-container-servlet</artifactId>
+    	<version>2.22.2</version>
     </dependency>
     <dependency>
-    	<groupId>com.sun.jersey</groupId>
-    	<artifactId>jersey-core</artifactId>
-    	<version>1.19</version>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>5.1.38</version>
     </dependency>
   </dependencies>
   <build>
