--- a/finance-analyzer/src/main/webapp/WEB-INF/web.xml
+++ b/finance-analyzer/src/main/webapp/WEB-INF/web.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <web-app>
-	<display-name>Finance Analyzer</display-name>
-
-	<servlet>
-		<servlet-name>jersey-serlvet</servlet-name>
-		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-		<init-param>
-		     <param-name>com.sun.jersey.config.property.packages</param-name>
-		     <param-value>controllers</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-
-	<servlet-mapping>
-		<servlet-name>jersey-serlvet</servlet-name>
-		<url-pattern>*</url-pattern>
-	</servlet-mapping>
-
-</web-app>
+	 <display-name>Finance Analyzer</display-name>
+	 <servlet>
+		 <servlet-name>Jersey Web Application</servlet-name>
+		 <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+		 <init-param>
+			 <param-name>jersey.config.server.provider.packages</param-name>
+			 <param-value>controllers</param-value>
+		 </init-param>
+		 <load-on-startup>1</load-on-startup>
+	 </servlet>
+	 <servlet-mapping>
+		 <servlet-name>Jersey Web Application</servlet-name>
+		 <url-pattern>/*</url-pattern>
+	 </servlet-mapping>
+ </web-app>
