--- a/finance-analyzer/pom.xml
+++ b/finance-analyzer/pom.xml
@@ -21,11 +21,6 @@
     	<version>3.0-alpha-1</version>
     </dependency>
     <dependency>
-    	<groupId>org.apache.openjpa</groupId>
-    	<artifactId>openjpa-all</artifactId>
-    	<version>2.4.1</version>
-    </dependency>
-    <dependency>
     	<groupId>org.glassfish.jersey.containers</groupId>
     	<artifactId>jersey-container-servlet</artifactId>
     	<version>2.22.2</version>
@@ -34,6 +29,16 @@
     	<groupId>mysql</groupId>
     	<artifactId>mysql-connector-java</artifactId>
     	<version>5.1.38</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.openjpa</groupId>
+    	<artifactId>openjpa</artifactId>
+    	<version>2.4.1</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.codehaus.jackson</groupId>
+    	<artifactId>jackson-jaxrs</artifactId>
+    	<version>1.9.13</version>
     </dependency>
   </dependencies>
   <build>
@@ -47,6 +52,33 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			<!-- <plugin>
+		        <groupId>org.apache.openjpa</groupId>
+		        <artifactId>openjpa-maven-plugin</artifactId>
+		        <version>2.4.1</version>
+		        <configuration>
+		            <includes>**/entities/*.class</includes>
+		            <excludes>**/entities/XML*.class</excludes>
+		            <addDefaultConstructor>true</addDefaultConstructor>               
+		            <enforcePropertyRestrictions>true</enforcePropertyRestrictions>
+		        </configuration>
+		        <executions>
+		            <execution>
+		                <id>enhancer</id>
+		                <phase>process-classes</phase>
+		                <goals>
+		                    <goal>enhance</goal>
+		                </goals>
+		            </execution>
+		        </executions>
+		        <dependencies>
+		            <dependency>
+		                <groupId>org.apache.openjpa</groupId>
+		                <artifactId>openjpa</artifactId>
+		                <version>2.4.1</version>
+		            </dependency>
+		        </dependencies>
+		    </plugin> -->
 		</plugins>
   </build>
 </project>
