--- a/finance-analyzer/pom.xml
+++ b/finance-analyzer/pom.xml
@@ -52,7 +52,7 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
-			<!-- <plugin>
+			<plugin>
 		        <groupId>org.apache.openjpa</groupId>
 		        <artifactId>openjpa-maven-plugin</artifactId>
 		        <version>2.4.1</version>
@@ -78,7 +78,7 @@
 		                <version>2.4.1</version>
 		            </dependency>
 		        </dependencies>
-		    </plugin> -->
+		    </plugin>
 		</plugins>
   </build>
 </project>
