--- a/finance-analyzer/src/main/webapp/WEB-INF/web.xml
+++ b/finance-analyzer/src/main/webapp/WEB-INF/web.xml
@@ -10,12 +10,16 @@
 			 <param-value>
 			 	controllers,
 				org.codehaus.jackson.jaxrs
-			</param-value> 
+			</param-value>
 		 </init-param>
+		 <init-param>
+		    <param-name>jersey.config.server.provider.classnames</param-name>
+		    <param-value>org.glassfish.jersey.filter.LoggingFilter</param-value>
+		</init-param>
 		 <load-on-startup>1</load-on-startup>
 	 </servlet>
 	 <servlet-mapping>
 		 <servlet-name>Jersey Web Application</servlet-name>
-		 <url-pattern>/*</url-pattern>
+		 <url-pattern>/rest/*</url-pattern>
 	 </servlet-mapping>
  </web-app>
