--- a/finance-analyzer/pom.xml
+++ b/finance-analyzer/pom.xml
@@ -45,6 +45,11 @@
     	<artifactId>jackson-mapper-asl</artifactId>
     	<version>1.9.13</version>
     </dependency>
+    <dependency>
+    	<groupId>org.apache.shiro</groupId>
+    	<artifactId>shiro-all</artifactId>
+    	<version>1.2.4</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>finance-analyzer</finalName>
