fixing shiro dependencies and adding dummy .ini file. #51

--- a/finance-analyzer/pom.xml
+++ b/finance-analyzer/pom.xml
@@ -47,7 +47,12 @@
     </dependency>
     <dependency>
     	<groupId>org.apache.shiro</groupId>
-    	<artifactId>shiro-all</artifactId>
+    	<artifactId>shiro-core</artifactId>
+    	<version>1.2.4</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.shiro</groupId>
+    	<artifactId>shiro-web</artifactId>
     	<version>1.2.4</version>
     </dependency>
   </dependencies>
