setting up shiros' many configurations. Closes #51

--- a/finance-analyzer/src/main/resources/shiro.ini
+++ b/finance-analyzer/src/main/resources/shiro.ini
@@ -1,25 +1,40 @@
-# =============================================================================
-# Tutorial INI configuration
-#
-# Usernames/passwords are based on the classic Mel Brooks' film "Spaceballs" :)
-# =============================================================================
+# =======================
+# Shiro INI configuration
+# =======================
 
-# -----------------------------------------------------------------------------
-# Users and their (optional) assigned roles
-# username = password, role1, role2, ..., roleN
-# -----------------------------------------------------------------------------
+[main]
+# Objects and their properties are defined here, 
+# Such as the securityManager, Realms and anything
+# else needed to build the SecurityManager
+
+ds = com.mysql.jdbc.jdbc2.optional.MysqlDataSource 
+ds.serverName = localhost
+ds.user = root
+ds.password = password
+ds.databaseName = FinanceAnalyzer
+ 
+jdbcRealm = org.apache.shiro.realm.jdbc.JdbcRealm
+jdbcRealm.dataSource = $ds
+jdbcRealm.permissionsLookupEnabled = true
+jdbcRealm.authenticationQuery = "SELECT password FROM users WHERE user_name = ?"
+jdbcRealm.userRolesQuery = "SELECT username FROM users WHERE user_name = ?"
+
+hashService = org.apache.shiro.crypto.hash.DefaultHashService
+hashService.hashIterations = 500000
+hashService.hashAlgorithmName = SHA-256
+hashService.generatePublicSalt = true
+
 [users]
-root = secret, admin
-guest = guest, guest
-presidentskroob = 12345, president
-darkhelmet = ludicrousspeed, darklord, schwartz
-lonestarr = vespa, goodguy, schwartz
+# The 'users' section is for simple deployments
+# when you only need a small number of statically-defined 
+# set of User accounts.
 
-# -----------------------------------------------------------------------------
-# Roles with assigned permissions
-# roleName = perm1, perm2, ..., permN
-# -----------------------------------------------------------------------------
 [roles]
-admin = *
-schwartz = lightsaber:*
-goodguy = winnebago:drive:eagle5
+# The 'roles' section is for simple deployments
+# when you only need a small number of statically-defined
+# roles.
+
+[urls]
+# The 'urls' section is used for url-based security
+# in web applications.  We'll discuss this section in the
+# Web documentation
