--- a/finance-analyzer/pom.xml
+++ b/finance-analyzer/pom.xml
@@ -55,6 +55,11 @@
     	<artifactId>shiro-web</artifactId>
     	<version>1.2.4</version>
     </dependency>
+    <dependency>
+	<groupId>commons-logging</groupId>
+		<artifactId>commons-logging</artifactId>
+		<version>1.2</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>finance-analyzer</finalName>
