--- a/finance-analyzer/src/main/webapp/WEB-INF/web.xml
+++ b/finance-analyzer/src/main/webapp/WEB-INF/web.xml
@@ -2,10 +2,12 @@
 
 <web-app>
 	 <display-name>Finance Analyzer</display-name>
+	 <!-- Jersey setup -->
 	 <servlet>
 		 <servlet-name>Jersey Web Application</servlet-name>
 		 <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		 <init-param>
+		 	 <!-- JSON deserializer setup -->
 			 <param-name>jersey.config.server.provider.packages</param-name>
 			 <param-value>
 			 	controllers,
@@ -22,4 +24,23 @@
 		 <servlet-name>Jersey Web Application</servlet-name>
 		 <url-pattern>/rest/*</url-pattern>
 	 </servlet-mapping>
+	 
+	<!-- Shiro setup -->
+	<listener>
+		<listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class>
+	</listener>
+	
+	<filter>
+		<filter-name>ShiroFilter</filter-name>
+		<filter-class>org.apache.shiro.web.servlet.ShiroFilter</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>ShiroFilter</filter-name>
+		<url-pattern>/auth/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
+		<dispatcher>INCLUDE</dispatcher>
+		<dispatcher>ERROR</dispatcher>
+	</filter-mapping>
  </web-app>
