making the app start without errors. still config to do. #51

--- a/finance-analyzer/src/main/webapp/WEB-INF/web.xml
+++ b/finance-analyzer/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,11 @@
 		 <url-pattern>/rest/*</url-pattern>
 	 </servlet-mapping>
 	 
+	 <!-- Custom initializer -->
+	<listener>
+		<listener-class> initializers.FinanceServletContextListener </listener-class>
+   </listener>
+	 
 	<!-- Shiro setup -->
 	<listener>
 		<listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class>
