--- a/finance-analyzer/pom.xml
+++ b/finance-analyzer/pom.xml
@@ -60,6 +60,11 @@
 		<artifactId>commons-logging</artifactId>
 		<version>1.2</version>
 	</dependency>
+    <dependency>
+    	<groupId>org.codehaus.jackson</groupId>
+    	<artifactId>jackson-xc</artifactId>
+    	<version>1.9.13</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>finance-analyzer</finalName>
