--- a/finance-analyzer/src/main/resources/shiro.ini
+++ b/finance-analyzer/src/main/resources/shiro.ini
@@ -24,6 +24,12 @@ hashService.hashIterations = 500000
 hashService.hashAlgorithmName = SHA-256
 hashService.generatePublicSalt = true
 
+passwordService = org.apache.shiro.authc.credential.DefaultPasswordService
+passwordService.hashService = $hashService
+
+passwordMatcher = org.apache.shiro.authc.credential.PasswordMatcher
+passwordMatcher.passwordService = $passwordService
+
 [users]
 # The 'users' section is for simple deployments
 # when you only need a small number of statically-defined 
