users can now log in with shiro security. Closes #46

--- a/finance-analyzer/src/main/resources/shiro.ini
+++ b/finance-analyzer/src/main/resources/shiro.ini
@@ -16,8 +16,8 @@ ds.databaseName = FinanceAnalyzer
 jdbcRealm = org.apache.shiro.realm.jdbc.JdbcRealm
 jdbcRealm.dataSource = $ds
 jdbcRealm.permissionsLookupEnabled = true
-jdbcRealm.authenticationQuery = "SELECT password FROM users WHERE user_name = ?"
-jdbcRealm.userRolesQuery = "SELECT username FROM users WHERE user_name = ?"
+jdbcRealm.authenticationQuery = SELECT password FROM users WHERE username = ?
+jdbcRealm.userRolesQuery = SELECT username FROM users WHERE username = ?
 
 hashService = org.apache.shiro.crypto.hash.DefaultHashService
 hashService.hashIterations = 500000
