--- a/finance-analyzer/src/main/webapp/WEB-INF/web.xml
+++ b/finance-analyzer/src/main/webapp/WEB-INF/web.xml
@@ -27,7 +27,7 @@
 	 
 	 <!-- Custom initializer -->
 	<listener>
-		<listener-class> initializers.FinanceServletContextListener </listener-class>
+		<listener-class> FinanceServletContextListener </listener-class>
    </listener>
 	 
 	<!-- Shiro setup -->
