working login/register - security is complete. Closes #47 and #50

--- a/finance-analyzer/src/main/resources/shiro.ini
+++ b/finance-analyzer/src/main/resources/shiro.ini
@@ -20,7 +20,7 @@ jdbcRealm.authenticationQuery = SELECT password FROM users WHERE username = ?
 jdbcRealm.userRolesQuery = SELECT username FROM users WHERE username = ?
 
 hashService = org.apache.shiro.crypto.hash.DefaultHashService
-hashService.hashIterations = 500000
+hashService.hashIterations = 1024
 hashService.hashAlgorithmName = SHA-256
 hashService.generatePublicSalt = true
 
@@ -29,6 +29,8 @@ passwordService.hashService = $hashService
 
 passwordMatcher = org.apache.shiro.authc.credential.PasswordMatcher
 passwordMatcher.passwordService = $passwordService
+
+jdbcRealm.credentialsMatcher = $passwordMatcher
 
 [users]
 # The 'users' section is for simple deployments
